# Education-Intelligence

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  TODO.md  alembic.ini  blueprint.md  docker-compose.yml  pyproject.toml  run_workers.sh  seed.py  tmp_analytics_burst.py
Premiumsaaslandingpage-main/: Dockerfile  package-lock.json  route-bridge.js
ai_service/: Dockerfile  cache.py  config.py  guardrails.py  llm_client.py  main.py  prompts.py  requirements.txt  schemas.py  service.py
alembic/: env.py
app/: main.py
backend/: Dockerfile  README.md  seed.py
docs/: autonomous_learning_agent.md  backend_scalability_architecture.md  business_strategy.md  demo_seed_data.md  digital_twin_architecture.md  distributed_system_architecture.md  global_deployment_architecture.md  launch_checklist.md  learning_intelligence_platform_architecture.md  ml_platform_architecture.md  multi_agent_ai_architecture.md  next_generation_intelligent_learning_platform.md  postgres_explain_analyze_examples.sql  postgres_index_recommendations.sql  production-deployment.md  reliability_runbook.md  tenant_rls_audit_20260402.md
k8s/: ai-service.yaml  api.yaml  configmap.yaml  cronjobs.yaml  frontend.yaml  hpa.yaml  ingress.yaml  namespace.yaml  network-policy.yaml  pdb.yaml  secrets.example.yaml  workers.yaml
learning-platform-frontend/: Dockerfile  Dockerfile.e2e  eslint.config.mjs  middleware.test.ts  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  playwright.live.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo  (+2 more)
(+830 files in other folders)
