[project]
name = "learning-intelligence-platform"
version = "0.1.0"
description = "Multi-tenant Learning Intelligence Platform backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29.0",
  "alembic>=1.13.2",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt>=4.1.2",
  "python-multipart>=0.0.9",
  "email-validator>=2.2.0",
  "redis>=5.0.0",
  "slowapi>=0.1.9",
  "prometheus-client>=0.20.0",
  "celery>=5.4.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.alembic]
script_location = "alembic"
[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]
